Correção de posicionamento de alguns elementos

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
     </div>
     <div class="main">
         <header>
-            <h3>texto</h3>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla incidunt ullam maiores</h2>
+            <p>texto</p>
+            <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla incidunt ullam maiores</h4>
         </header>
+        <div class="content">
+            <h1>Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do município de Campinas/SP </h1>
+            
 
+        </div>
+        <footer>
+
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
